<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/textview_NameConsumption">
    </TextView>
    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background"
        android:paddingLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        ></EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/textview_SumComsumption">
    </TextView>
    <EditText
        android:id="@+id/sum_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background"
        android:paddingLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        ></EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/textview_CategoryConsumption">
    </TextView>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/category"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/edittext_CategoryConsumption"></Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/textview_DateConsumption">
    </TextView>

    <DatePicker
        android:id="@+id/date_Consumption"
        android:layout_width="392dp"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"></DatePicker>
    <Button
        android:id="@+id/button_addConsumtoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/addСonsumption">
    </Button>
</LinearLayout>