<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment2"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textMain"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Redactor"
        android:textColor="@color/black"
        android:textSize="25dp"
      ></TextView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recuclerview"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="10dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/del_Consumtoins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/delСonsumptions">
    </Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/textview_SumComsumption">
    </TextView>
    <EditText
        android:id="@+id/sum_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background"
        android:paddingLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        ></EditText>
    <Button
        android:id="@+id/edit_Consumtoins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/edit">
    </Button>
</LinearLayout>